Commit hm3 functional fixes1